fix modal.module.scss delete z-index: 999,  cardModal.module.scss delete max-height:  590px

--- a/src/features/decks/modals/cardModal/cardModal.module.scss
+++ b/src/features/decks/modals/cardModal/cardModal.module.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  max-height: 590px;
+
+  //max-height: 590px;
 }
 
 .form {
